--- a/EthernetLinkConfig/Forms/FrmOldFirmwareSettingLineCount.resx
+++ b/EthernetLinkConfig/Forms/FrmOldFirmwareSettingLineCount.resx
@@ -117,12 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lbMessage.Text" xml:space="preserve">
-    <value>The unit is set to send each call record [X] times.  The default is 1.
-Multiple call records should be only used for increased network 
-throughput and with applications capable of ignoring duplicate 
-call records.</value>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Starting line number on the unit is [X].
+If only one Caller ID device is installed, the
+line number needs to be changed to 1.
+
+Please press the “Line Select” button on 
+the back of the unit down for 2 seconds 
+to change the starting line count.</value>
   </data>
+  <metadata name="timerUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
