--- a/EthernetLinkConfig/Forms/FrmSetLineCountWithDipSwitches.resx
+++ b/EthernetLinkConfig/Forms/FrmSetLineCountWithDipSwitches.resx
@@ -117,11 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lbMessage.Text" xml:space="preserve">
-    <value>The unit is set to send each call record [X] times.  The default is 1.
-Multiple call records should be only used for increased network 
-throughput and with applications capable of ignoring duplicate 
-call records.</value>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Line number &gt; 8 detected. If only one
+Caller ID device is installed, the starting
+line number should be set to 1.
+
+If using a Basic unit, set the first 3 DIP switches
+on the front of the unit to the down position.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
